--- a/CourseManagement/View/FirstPageView.xaml
+++ b/CourseManagement/View/FirstPageView.xaml
@@ -1,12 +1,353 @@
-﻿<UserControl x:Class="CourseManagement.View.FirstPageView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:CourseManagement.View"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-		<TextBlock Text="首页" FontSize="30"></TextBlock>
-    </Grid>
+﻿<UserControl x:Class="CourseManagement.View.FirstPageView" 
+			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+			 xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf" 
+			 xmlns:lvcs="clr-namespace:LiveCharts;assembly=LiveCharts"
+			 xmlns:csc="clr-namespace:Course.Controls;assembly=Course.Controls" 
+			 xmlns:converter="clr-namespace:CourseManagement.Converter"
+			 xmlns:local="clr-namespace:CourseManagement.View" 
+			 mc:Ignorable="d" d:DesignHeight="750" d:DesignWidth="1000">
+	<UserControl.Resources>
+		<converter:BoolToArrowConverter x:Key="BoolToArrowConverter"></converter:BoolToArrowConverter>
+		<converter:BoolToBrushConverter x:Key="BoolToBrushConverter"></converter:BoolToBrushConverter>
+	</UserControl.Resources>
+	<ScrollViewer VerticalScrollBarVisibility="Hidden">
+	<Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="160"></RowDefinition>
+			<RowDefinition Height="360"></RowDefinition>
+			<RowDefinition></RowDefinition>
+		</Grid.RowDefinitions>
+		<UniformGrid Columns="4">
+			<Border CornerRadius="5" Background="White" Margin="10">
+				<Border.Effect>
+					<DropShadowEffect Color="#F2F2F2" ShadowDepth="10" BlurRadius="105" Opacity="0.4" Direction="270"></DropShadowEffect>
+				</Border.Effect>
+				<Grid>
+					<lvc:CartesianChart Margin="0,0,0,45">
+						<lvc:CartesianChart.Series>
+							<lvc:LineSeries Stroke="#FECC71" Fill="#FFF2DE" PointGeometrySize="0" Values="1,2,3,40,5,6,7"></lvc:LineSeries>
+						</lvc:CartesianChart.Series>
+						<lvc:CartesianChart.AxisX>
+							<lvc:Axis ShowLabels="False"></lvc:Axis>
+						</lvc:CartesianChart.AxisX>
+						<lvc:CartesianChart.AxisY>
+							<lvc:Axis ShowLabels="False" MinValue="0" MaxValue="100"></lvc:Axis>
+						</lvc:CartesianChart.AxisY>
+					</lvc:CartesianChart>
+					<StackPanel Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="15">
+						<Border Width="20" Height="20" Background="#EDFAF0" CornerRadius="5">
+							<TextBlock Text="&#xe62a;" FontFamily="../Assets/Fonts/#iconfont" Foreground="#7ADA95" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
+						</Border>
+						<TextBlock Text="32%" VerticalAlignment="Center" Foreground="#7ADA95" Margin="5,0,0,0"></TextBlock>
+					</StackPanel>
+					<StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Margin="15,3">
+						<Border Width="36" Height="36" Background="#FFF5E9" CornerRadius="10">
+							<TextBlock Text="&#xea2e;" FontFamily="../Assets/Fonts/#iconfont" Foreground="#FFBC57" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20"></TextBlock>
+						</Border>
+						<StackPanel Margin="15,0,0,0">
+							<TextBlock Text="监控数据一" FontSize="12" Foreground="#3F4C5D"></TextBlock>
+							<TextBlock Text="32%" FontSize="16" FontWeight="Bold" Foreground="#3F4C5D"></TextBlock>
+						</StackPanel>
+					</StackPanel>
+				</Grid>
+			</Border>
+			<Border CornerRadius="5" Background="White" Margin="10">
+				<Border.Effect>
+					<DropShadowEffect Color="#F2F2F2" ShadowDepth="10" BlurRadius="105" Opacity="0.4" Direction="270"></DropShadowEffect>
+				</Border.Effect>
+				<Grid>
+					<lvc:CartesianChart Margin="0,0,0,45">
+						<lvc:CartesianChart.Series>
+							<lvc:LineSeries Stroke="#FF7261" Fill="#FFE3E0" PointGeometrySize="0" Values="1,2,3,40,5,6,7"></lvc:LineSeries>
+						</lvc:CartesianChart.Series>
+						<lvc:CartesianChart.AxisX>
+							<lvc:Axis ShowLabels="False"></lvc:Axis>
+						</lvc:CartesianChart.AxisX>
+						<lvc:CartesianChart.AxisY>
+							<lvc:Axis ShowLabels="False" MinValue="0" MaxValue="100"></lvc:Axis>
+						</lvc:CartesianChart.AxisY>
+					</lvc:CartesianChart>
+					<StackPanel Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="15">
+						<Border Width="20" Height="20" Background="#EDFAF0" CornerRadius="5">
+							<TextBlock Text="&#xe62a;" FontFamily="../Assets/Fonts/#iconfont" Foreground="#7ADA95" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
+						</Border>
+						<TextBlock Text="32%" VerticalAlignment="Center" Foreground="#7ADA95" Margin="5,0,0,0"></TextBlock>
+					</StackPanel>
+					<StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Margin="15,3">
+						<Border Width="36" Height="36" Background="#FFF1F1" CornerRadius="10">
+							<TextBlock Text="&#xe609;" FontFamily="../Assets/Fonts/#iconfont" Foreground="#FF7261" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20"></TextBlock>
+						</Border>
+						<StackPanel Margin="15,0,0,0">
+							<TextBlock Text="监控数据一" FontSize="12" Foreground="#3F4C5D"></TextBlock>
+							<TextBlock Text="32%" FontSize="16" FontWeight="Bold" Foreground="#3F4C5D"></TextBlock>
+						</StackPanel>
+					</StackPanel>
+				</Grid>
+			</Border>
+			<Border CornerRadius="5" Background="White" Margin="10">
+				<Border.Effect>
+					<DropShadowEffect Color="#F2F2F2" ShadowDepth="10" BlurRadius="105" Opacity="0.4" Direction="270"></DropShadowEffect>
+				</Border.Effect>
+				<Grid>
+					<lvc:CartesianChart Margin="0,0,0,45">
+						<lvc:CartesianChart.Series>
+							<lvc:LineSeries Stroke="#FECC71" Fill="#FFF2DE" PointGeometrySize="0" Values="1,2,3,40,5,6,7"></lvc:LineSeries>
+						</lvc:CartesianChart.Series>
+						<lvc:CartesianChart.AxisX>
+							<lvc:Axis ShowLabels="False"></lvc:Axis>
+						</lvc:CartesianChart.AxisX>
+						<lvc:CartesianChart.AxisY>
+							<lvc:Axis ShowLabels="False" MinValue="0" MaxValue="100"></lvc:Axis>
+						</lvc:CartesianChart.AxisY>
+					</lvc:CartesianChart>
+					<StackPanel Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="15">
+						<Border Width="20" Height="20" Background="#EDFAF0" CornerRadius="5">
+							<TextBlock Text="&#xe62a;" FontFamily="../Assets/Fonts/#iconfont" Foreground="#7ADA95" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
+						</Border>
+						<TextBlock Text="32%" VerticalAlignment="Center" Foreground="#7ADA95" Margin="5,0,0,0"></TextBlock>
+					</StackPanel>
+					<StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Margin="15,3">
+						<Border Width="36" Height="36" Background="#FFF5E9" CornerRadius="10">
+							<TextBlock Text="&#xea2e;" FontFamily="../Assets/Fonts/#iconfont" Foreground="#FFBC57" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20"></TextBlock>
+						</Border>
+						<StackPanel Margin="15,0,0,0">
+							<TextBlock Text="监控数据一" FontSize="12" Foreground="#3F4C5D"></TextBlock>
+							<TextBlock Text="32%" FontSize="16" FontWeight="Bold" Foreground="#3F4C5D"></TextBlock>
+						</StackPanel>
+					</StackPanel>
+				</Grid>
+			</Border>
+			<Border CornerRadius="5" Background="White" Margin="10">
+				<Border.Effect>
+					<DropShadowEffect Color="#F2F2F2" ShadowDepth="10" BlurRadius="105" Opacity="0.4" Direction="270"></DropShadowEffect>
+				</Border.Effect>
+				<Grid>
+					<lvc:CartesianChart Margin="0,0,0,45">
+						<lvc:CartesianChart.Series>
+							<lvc:LineSeries Stroke="#FECC71" Fill="#FFF2DE" PointGeometrySize="0" Values="1,2,3,40,5,6,7"></lvc:LineSeries>
+						</lvc:CartesianChart.Series>
+						<lvc:CartesianChart.AxisX>
+							<lvc:Axis ShowLabels="False"></lvc:Axis>
+						</lvc:CartesianChart.AxisX>
+						<lvc:CartesianChart.AxisY>
+							<lvc:Axis ShowLabels="False" MinValue="0" MaxValue="100"></lvc:Axis>
+						</lvc:CartesianChart.AxisY>
+					</lvc:CartesianChart>
+					<StackPanel Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="15">
+						<Border Width="20" Height="20" Background="#EDFAF0" CornerRadius="5">
+							<TextBlock Text="&#xe62a;" FontFamily="../Assets/Fonts/#iconfont" Foreground="#7ADA95" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
+						</Border>
+						<TextBlock Text="32%" VerticalAlignment="Center" Foreground="#7ADA95" Margin="5,0,0,0"></TextBlock>
+					</StackPanel>
+					<StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Margin="15,3">
+						<Border Width="36" Height="36" Background="#FFF5E9" CornerRadius="10">
+							<TextBlock Text="&#xea2e;" FontFamily="../Assets/Fonts/#iconfont" Foreground="#FFBC57" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20"></TextBlock>
+						</Border>
+						<StackPanel Margin="15,0,0,0">
+							<TextBlock Text="监控数据一" FontSize="12" Foreground="#3F4C5D"></TextBlock>
+							<TextBlock Text="32%" FontSize="16" FontWeight="Bold" Foreground="#3F4C5D"></TextBlock>
+						</StackPanel>
+					</StackPanel>
+				</Grid>
+			</Border>
+		</UniformGrid>
+
+		<Grid Grid.Row="1" Margin="10,0">
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition></ColumnDefinition>
+				<ColumnDefinition></ColumnDefinition>
+			</Grid.ColumnDefinitions>
+			<Grid.RowDefinitions>
+				<RowDefinition></RowDefinition>
+				<RowDefinition></RowDefinition>
+			</Grid.RowDefinitions>
+
+			<!--学员访问情况监控-->
+			<Grid Margin="0,0,10,0">
+				<Grid.RowDefinitions>
+					<RowDefinition Height="40"></RowDefinition>
+					<RowDefinition></RowDefinition>
+				</Grid.RowDefinitions>
+				<TextBlock Text="学员访问情况监控" Foreground="#3F4C5D" VerticalAlignment="Center" FontSize="15" FontWeight="Bold"></TextBlock>
+				<TextBlock HorizontalAlignment="Right" VerticalAlignment="Center">
+					<Hyperlink>详情</Hyperlink>
+				</TextBlock>
+				<Border CornerRadius="5" Background="White" Grid.Row="1">
+					<Border.Effect>
+						<DropShadowEffect Color="#F2F2F2" ShadowDepth="10" BlurRadius="105" Opacity="0.4" Direction="270"></DropShadowEffect>
+					</Border.Effect>
+					<Grid>
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="150"></ColumnDefinition>
+							<ColumnDefinition></ColumnDefinition>
+						</Grid.ColumnDefinitions>
+						<StackPanel HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0">
+							<TextBlock Text="当前使用率" FontSize="14" Foreground="#3F4C5D"></TextBlock>
+							<TextBlock Text="+120%" FontSize="18" FontWeight="Bold" Foreground="#3F4C5D" HorizontalAlignment="Center"></TextBlock>
+						</StackPanel>
+						<StackPanel HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,0,0,10">
+							<StackPanel Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Left">
+								<Border Width="20" Height="20" Background="#EDFAF0" CornerRadius="5">
+									<TextBlock Text="&#xe62a;" FontFamily="../Assets/Fonts/#iconfont" Foreground="#7ADA95" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
+								</Border>
+								<TextBlock Text="32%" VerticalAlignment="Center" Foreground="#7ADA95" Margin="5,0,0,0"></TextBlock>
+							</StackPanel>
+							<TextBlock Text="最高使用率" HorizontalAlignment="Center" Foreground="#3F4C5D" FontSize="12"></TextBlock>
+						</StackPanel>
+
+						<lvc:CartesianChart Margin="10" Grid.Column="1">
+							<lvc:CartesianChart.Series>
+								<lvc:LineSeries Stroke="#3BC8D7" Fill="#E1F2F6" PointGeometrySize="0" Values="1,2,3,40,5,6,7"></lvc:LineSeries>
+							</lvc:CartesianChart.Series>
+							<lvc:CartesianChart.AxisX>
+								<lvc:Axis ShowLabels="False"></lvc:Axis>
+							</lvc:CartesianChart.AxisX>
+							<lvc:CartesianChart.AxisY>
+								<lvc:Axis ShowLabels="True" MinValue="0" MaxValue="100"></lvc:Axis>
+							</lvc:CartesianChart.AxisY>
+						</lvc:CartesianChart>
+					</Grid>
+				</Border>
+			</Grid>
+
+			<Grid Grid.Row="1" Margin="0,0,10,0">
+				<Grid.RowDefinitions>
+					<RowDefinition Height="40"></RowDefinition>
+					<RowDefinition></RowDefinition>
+				</Grid.RowDefinitions>
+				<TextBlock Text="朝夕教育" Foreground="#3F4C5D" VerticalAlignment="Center" FontSize="15" FontWeight="Bold"></TextBlock>
+				<Border Grid.Row="1" Background="#007DFA" CornerRadius="10">
+					<Border.Effect>
+						<DropShadowEffect Color="#F2F2F2" ShadowDepth="10" BlurRadius="10" Opacity="0.4" Direction="270"></DropShadowEffect>
+					</Border.Effect>
+					<Grid>
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition></ColumnDefinition>
+							<ColumnDefinition Width="100"></ColumnDefinition>
+						</Grid.ColumnDefinitions>
+						<StackPanel VerticalAlignment="Center">
+							<TextBlock Text="Hi，小伙伴们" Foreground="White" Margin="15,0,0,10"></TextBlock>
+							<TextBlock Text="朝夕教育，专注于IT在线教育。朝夕教育，专注于IT在线教育。朝夕教育，专注于IT在线教育。朝夕教育，专注于IT在线教育。朝夕教育，专注于IT在线教育。朝夕教育，专注于IT在线教育。朝夕教育，专注于IT在线教育。朝夕教育，专注于IT在线教育。朝夕教育，专注于IT在线教育。朝夕教育，专注于IT在线教育。" LineHeight="20" Margin="15,0,0,0" Foreground="#B3E9F1" TextWrapping="Wrap"></TextBlock>
+						</StackPanel>
+						<Image Source="../Assets/Images/Logo.jpg" Grid.Column="1" Width="60" Height="60"></Image>
+					</Grid>
+				</Border>
+
+			</Grid>
+
+			<Grid Grid.Column="1" Grid.RowSpan="2">
+				<Grid.RowDefinitions>
+					<RowDefinition Height="40"></RowDefinition>
+					<RowDefinition></RowDefinition>
+				</Grid.RowDefinitions>
+				<TextBlock Text="指针仪表数据监控" Foreground="#3F4C5D" VerticalAlignment="Center" FontSize="15" FontWeight="Bold"></TextBlock>
+				<Border Grid.Row="1" Margin="10,0,0,0" CornerRadius="10">
+					<Border.Background>
+						<LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+							<GradientStop Color="White" />
+							<GradientStop Color="#EDFAF0" Offset="0.5" />
+						</LinearGradientBrush>
+					</Border.Background>
+					<Grid>
+						<StackPanel Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="15">
+							<Border Width="20" Height="20" Background="#FFF1F1" CornerRadius="5">
+								<TextBlock Text="&#xe62a;" FontFamily="../Assets/Fonts/#iconfont" Foreground="Red" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
+							</Border>
+							<TextBlock Text="32%" VerticalAlignment="Center" Foreground="Red" Margin="5,0,0,0"></TextBlock>
+						</StackPanel>
+						<StackPanel HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="30,0,0,20">
+							<TextBlock Text="当前使用率" FontSize="14" Foreground="#3F4C5D"></TextBlock>
+							<TextBlock Text="+120%" FontSize="18" FontWeight="Bold" Foreground="#3F4C5D" HorizontalAlignment="Center"></TextBlock>
+						</StackPanel>
+						<StackPanel HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,30,20">
+							<StackPanel Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Left">
+								<Border Width="20" Height="20" Background="#EDFAF0" CornerRadius="5">
+									<TextBlock Text="&#xe62a;" FontFamily="../Assets/Fonts/#iconfont" Foreground="#7ADA95" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
+								</Border>
+								<TextBlock Text="32%" VerticalAlignment="Center" Foreground="#7ADA95" Margin="5,0,0,0"></TextBlock>
+							</StackPanel>
+							<TextBlock Text="最高使用率" HorizontalAlignment="Center" Foreground="#3F4C5D" FontSize="12"></TextBlock>
+						</StackPanel>
+						<csc:Instrument Margin="0,20,0,40" PlateBackground="Orange" Value="{Binding InstrumentValue}" Minimum="-10" Maximum="100" Interval="11" ScaleTextSize="16" ScaleBrush="White"></csc:Instrument>
+					</Grid>
+				</Border>
+			</Grid>
+		</Grid>
+
+		<Grid Margin="10,0" Grid.Row="2">
+			<Grid.RowDefinitions>
+				<RowDefinition Height="40"></RowDefinition>
+				<RowDefinition></RowDefinition>
+			</Grid.RowDefinitions>
+			<TextBlock Text="课程总览" Foreground="#3F4C5D" VerticalAlignment="Center" FontSize="15" FontWeight="Bold"></TextBlock>
+			<TextBlock HorizontalAlignment="Right" VerticalAlignment="Center">
+					<Hyperlink>详情</Hyperlink>
+			</TextBlock>
+			<ItemsControl ItemsSource="{Binding CourseSeriesList}" Grid.Row="1">
+				<ItemsControl.ItemsPanel>
+					<ItemsPanelTemplate>
+						<VirtualizingStackPanel></VirtualizingStackPanel>
+					</ItemsPanelTemplate>
+				</ItemsControl.ItemsPanel>
+				<ItemsControl.ItemTemplate>
+					<DataTemplate>
+						<Border Background="White" CornerRadius="10" Margin="0,5">
+							<Border.Effect>
+								<DropShadowEffect Color="Gray" ShadowDepth="0" BlurRadius="10" Opacity="0.2" Direction="0"></DropShadowEffect>
+							</Border.Effect>
+							<Grid Height="70">
+								<Grid.ColumnDefinitions>
+									<ColumnDefinition></ColumnDefinition>
+									<ColumnDefinition></ColumnDefinition>
+									<ColumnDefinition Width="3.5*"></ColumnDefinition>
+								</Grid.ColumnDefinitions>
+								<Border BorderBrush="#DDD" BorderThickness="0,0,1,0" Margin="0,10"></Border>
+								<Border BorderBrush="#DDD" BorderThickness="0,0,1,0" Margin="0,10" Grid.Column="1"></Border>
+								<TextBlock Text="{Binding CourseName}" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#444"></TextBlock>
+								<lvc:PieChart Grid.Column="1" LegendLocation="Right" InnerRadius="15" Margin="0,0,15,0" Series="{Binding SeriesCollection}">
+									<lvc:PieChart.ChartLegend>
+										<lvc:DefaultLegend BulletSize="10"></lvc:DefaultLegend>
+									</lvc:PieChart.ChartLegend>
+									<lvc:PieChart.DataTooltip>
+										<lvc:DefaultTooltip BulletSize="10"></lvc:DefaultTooltip>
+									</lvc:PieChart.DataTooltip>
+								</lvc:PieChart>
+								<ItemsControl Grid.Column="2" ItemsSource="{Binding SeriesList}">
+									<ItemsControl.ItemsPanel>
+										<ItemsPanelTemplate>
+											<UniformGrid Columns="{Binding DataContext.ItemCount,RelativeSource={RelativeSource AncestorType=UserControl,Mode=FindAncestor}}"></UniformGrid>
+										</ItemsPanelTemplate>
+									</ItemsControl.ItemsPanel>
+									<ItemsControl.ItemTemplate>
+										<DataTemplate>
+											<Grid VerticalAlignment="Center" HorizontalAlignment="Center">
+												<Grid.ColumnDefinitions>
+													<ColumnDefinition></ColumnDefinition>
+													<ColumnDefinition></ColumnDefinition>
+												</Grid.ColumnDefinitions>
+												<Grid.RowDefinitions>
+													<RowDefinition MinHeight="30"></RowDefinition>
+													<RowDefinition MinHeight="30"></RowDefinition>
+												</Grid.RowDefinitions>
+												<TextBlock Text="{Binding SeriesName}" VerticalAlignment="Center"></TextBlock>
+												<TextBlock Text="{Binding CurrentValue}" Grid.Row="1" VerticalAlignment="Center"></TextBlock>
+												<TextBlock Text="{Binding IsGrowing,Converter={StaticResource BoolToArrowConverter}}" Grid.Column="1" VerticalAlignment="Center" Margin="10,0,0,0"
+														   Foreground="{Binding IsGrowing,Converter={StaticResource BoolToBrushConverter}}"></TextBlock>
+												<TextBlock Text="{Binding ChangeRate}" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" Margin="10,0,0,0" 
+														   Foreground="{Binding IsGrowing,Converter={StaticResource BoolToBrushConverter}}"></TextBlock>
+											</Grid>
+										</DataTemplate>
+									</ItemsControl.ItemTemplate>
+								</ItemsControl>
+							</Grid>
+						</Border>
+					</DataTemplate>
+				</ItemsControl.ItemTemplate>
+			</ItemsControl>
+		</Grid>
+	</Grid>
+	</ScrollViewer>
 </UserControl>
