--- a/CourseManagement/View/CoursePageView.xaml
+++ b/CourseManagement/View/CoursePageView.xaml
@@ -3,10 +3,268 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:CourseManagement.View"
-             mc:Ignorable="d" 
+             xmlns:local="clr-namespace:CourseManagement.View" 
+			 xmlns:csc="clr-namespace:Course.Controls;assembly=Course.Controls" 
+			 xmlns:comm="clr-namespace:CourseManagement.Common"
+			 mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-		<TextBlock Text="课程中心" FontSize="30"></TextBlock>
-    </Grid>
+	<UserControl.Resources>
+		<ControlTemplate TargetType="RadioButton" x:Key="CategoryItemButtonTemplate">
+			<Grid Background="Transparent">
+				<Border Background="#EEE" CornerRadius="5" Name="back">
+					<TextBlock Text="{TemplateBinding Content}" Margin="15,6" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
+				</Border>
+			</Grid>
+			<ControlTemplate.Triggers>
+				<Trigger Property="IsChecked" Value="True">
+					<Setter Property="Background" Value="Orange" TargetName="back"></Setter>
+					<Setter Property="Foreground" Value="White"></Setter>
+				</Trigger>
+			</ControlTemplate.Triggers>
+		</ControlTemplate>
+		<DataTemplate x:Key="courseTemplate">
+			<Grid>
+				<Grid Name="courseContent">
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="150"></ColumnDefinition>
+						<ColumnDefinition></ColumnDefinition>
+						<ColumnDefinition Width="100"></ColumnDefinition>
+					</Grid.ColumnDefinitions>
+					<Border Width="90" Height="60" CornerRadius="5" Margin="0,15">
+						<Border.Effect>
+							<DropShadowEffect Color="Gray" ShadowDepth="0" BlurRadius="10" Opacity="0.3" Direction="0"></DropShadowEffect>
+						</Border.Effect>
+						<Border.Background>
+							<ImageBrush ImageSource="{Binding Cover}" Stretch="UniformToFill"></ImageBrush>
+						</Border.Background>
+					</Border>
+					<StackPanel Grid.Column="1" VerticalAlignment="Center">
+						<StackPanel Orientation="Horizontal" Margin="0,0,0,10">
+							<TextBlock FontSize="16">
+										<Hyperlink Foreground="#333" Command="{Binding DataContext.OpenCourseUrlCommand,RelativeSource={RelativeSource AncestorType=UserControl,Mode=FindAncestor}}" CommandParameter="{Binding Url}">
+											<Hyperlink.Style>
+												<Style>
+													<Setter Property="TextBlock.TextDecorations" Value="{x:Null}"></Setter>
+													<Style.Triggers>
+														<Trigger Property="Hyperlink.IsMouseOver" Value="True">
+															<Setter Property="TextBlock.TextDecorations">
+																<Setter.Value>
+																	<TextDecorationCollection>
+																		<TextDecoration Location="Underline"></TextDecoration>
+																	</TextDecorationCollection>
+																</Setter.Value>
+															</Setter>
+														</Trigger>
+													</Style.Triggers>
+												</Style>
+											</Hyperlink.Style>
+											<TextBlock Text="{Binding CourseName}"></TextBlock>
+										</Hyperlink>
+									</TextBlock>
+							<ItemsControl Margin="15,0" ItemsSource="{Binding Teachers}">
+								<ItemsControl.ItemsPanel>
+									<ItemsPanelTemplate>
+										<VirtualizingStackPanel Orientation="Horizontal"></VirtualizingStackPanel>
+									</ItemsPanelTemplate>
+								</ItemsControl.ItemsPanel>
+								<ItemsControl.ItemTemplate>
+									<DataTemplate>
+										<Border Background="#EEE" Margin="5,0" CornerRadius="5">
+											<TextBlock Text="{Binding}" Margin="12,3"></TextBlock>
+										</Border>
+									</DataTemplate>
+								</ItemsControl.ItemTemplate>
+							</ItemsControl>
+						</StackPanel>
+						<TextBlock Text="{Binding Description}" TextWrapping="Wrap" LineHeight="23" Foreground="#AAA"></TextBlock>
+					</StackPanel>
+					<StackPanel Orientation="Horizontal" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center">
+						<TextBlock Margin="5,0">
+							<Hyperlink>详情</Hyperlink>
+						</TextBlock>
+						<TextBlock Margin="5,0">
+							<Hyperlink>删除</Hyperlink>
+						</TextBlock>
+					</StackPanel>
+				</Grid>
+				<csc:SkeletonScreen Name="skeleton"></csc:SkeletonScreen>
+			</Grid>
+			<DataTemplate.Triggers>
+				<DataTrigger Binding="{Binding IsShowSkeleton}" Value="True">
+					<Setter Property="Visibility" Value="Visible" TargetName="skeleton"></Setter>
+					<Setter Property="Visibility" Value="Collapsed" TargetName="courseContent"></Setter>
+				</DataTrigger>
+				<DataTrigger Binding="{Binding IsShowSkeleton}" Value="False">
+					<Setter Property="Visibility" Value="Collapsed" TargetName="skeleton"></Setter>
+					<Setter Property="Visibility" Value="Visible" TargetName="courseContent"></Setter>
+				</DataTrigger>
+			</DataTemplate.Triggers>
+		</DataTemplate>
+		<DataTemplate x:Key="skeletonTemplate">
+			<csc:SkeletonScreen Name="skeleton"></csc:SkeletonScreen>
+		</DataTemplate>
+	</UserControl.Resources>
+	<Border CornerRadius="5" Background="White">
+		<Grid>
+			<Grid.RowDefinitions>
+				<RowDefinition Height="Auto"></RowDefinition>
+				<RowDefinition></RowDefinition>
+			</Grid.RowDefinitions>
+			<Border BorderBrush="#DDD" BorderThickness="0,0,0,1" Margin="20,0">
+				<Grid Margin="10,18">
+					<Grid.RowDefinitions>
+						<RowDefinition MinHeight="35" Height="Auto"></RowDefinition>
+						<RowDefinition MinHeight="35" Height="Auto"></RowDefinition>
+						<RowDefinition MinHeight="35" Height="Auto"></RowDefinition>
+					</Grid.RowDefinitions>
+					
+					<StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+						<TextBlock Text="课程分类" VerticalAlignment="Center" Margin="0,0,10,0" Foreground="#666"></TextBlock>
+						<ItemsControl ItemsSource="{Binding CategoryCourses}">
+							<ItemsControl.ItemsPanel>
+								<ItemsPanelTemplate>
+									<StackPanel Orientation="Horizontal"></StackPanel>
+								</ItemsPanelTemplate>
+							</ItemsControl.ItemsPanel>
+							<ItemsControl.ItemTemplate>
+								<DataTemplate>
+									<RadioButton Content="{Binding CategoryName}" IsChecked="{Binding IsSelected}" Template="{StaticResource CategoryItemButtonTemplate}" Margin="5,0" GroupName="course"></RadioButton>
+								</DataTemplate>
+							</ItemsControl.ItemTemplate>
+						</ItemsControl>
+					</StackPanel>
+					<StackPanel Orientation="Horizontal" VerticalAlignment="Center" Grid.Row="1">
+						<TextBlock Text="技术分类" VerticalAlignment="Center" Margin="0,0,10,0" Foreground="#666"></TextBlock>
+						<ItemsControl ItemsSource="{Binding CategoryTechnology}">
+							<ItemsControl.ItemsPanel>
+								<ItemsPanelTemplate>
+									<StackPanel Orientation="Horizontal"></StackPanel>
+								</ItemsPanelTemplate>
+							</ItemsControl.ItemsPanel>
+							<ItemsControl.ItemTemplate>
+								<DataTemplate>
+									<RadioButton Content="{Binding CategoryName}" IsChecked="{Binding IsSelected}" Template="{StaticResource CategoryItemButtonTemplate}" Margin="5,0" GroupName="technology"></RadioButton>
+								</DataTemplate>
+							</ItemsControl.ItemTemplate>
+						</ItemsControl>
+					</StackPanel>
+					<StackPanel Orientation="Horizontal" VerticalAlignment="Center" Grid.Row="2">
+						<TextBlock Text="授课老师" VerticalAlignment="Center" Margin="0,0,10,0" Foreground="#666"></TextBlock>
+						<ItemsControl ItemsSource="{Binding CategoryTeacher}">
+							<ItemsControl.ItemsPanel>
+								<ItemsPanelTemplate>
+									<StackPanel Orientation="Horizontal"></StackPanel>
+								</ItemsPanelTemplate>
+							</ItemsControl.ItemsPanel>
+							<ItemsControl.ItemTemplate>
+								<DataTemplate>
+									<!--<RadioButton Content="{Binding CategoryName}" IsChecked="{Binding IsSelected}" Template="{StaticResource CategoryItemButtonTemplate}" Margin="5,0" GroupName="teacher" 
+												 Command="{Binding DataContext.TeacherFilterCommand,RelativeSource={RelativeSource AncestorType=UserControl,Mode=FindAncestor}}" 
+												 CommandParameter="{Binding CategoryName}">
+									</RadioButton>-->
+									<RadioButton Content="{Binding CategoryName}" IsChecked="{Binding IsSelected}" Template="{StaticResource CategoryItemButtonTemplate}" Margin="5,0" GroupName="teacher"
+												 Click="RadioButton_Click">
+									</RadioButton>
+								</DataTemplate>
+							</ItemsControl.ItemTemplate>
+						</ItemsControl>
+					</StackPanel>
+
+					<Button Grid.Row="2" Content="+ 添加课程" Width="100" Height="30" HorizontalAlignment="Right" VerticalAlignment="Center"></Button>
+				</Grid>
+			</Border>
+			<ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Hidden">
+				<ItemsControl ItemsSource="{Binding CourseList}" Name="icCourses">
+					<ItemsControl.ItemsPanel>
+						<ItemsPanelTemplate>
+							<VirtualizingStackPanel></VirtualizingStackPanel>
+						</ItemsPanelTemplate>
+					</ItemsControl.ItemsPanel>
+					<!--<ItemsControl.ItemTemplate>
+						<DataTemplate>
+							<Grid>
+								<Grid Name="courseContent">
+									<Grid.ColumnDefinitions>
+										<ColumnDefinition Width="150"></ColumnDefinition>
+										<ColumnDefinition></ColumnDefinition>
+										<ColumnDefinition Width="100"></ColumnDefinition>
+									</Grid.ColumnDefinitions>
+									<Border Width="90" Height="60" CornerRadius="5" Margin="0,15">
+										<Border.Effect>
+											<DropShadowEffect Color="Gray" ShadowDepth="0" BlurRadius="10" Opacity="0.3" Direction="0"></DropShadowEffect>
+										</Border.Effect>
+										<Border.Background>
+											<ImageBrush ImageSource="{Binding Cover}" Stretch="UniformToFill"></ImageBrush>
+										</Border.Background>
+									</Border>
+									<StackPanel Grid.Column="1" VerticalAlignment="Center">
+										<StackPanel Orientation="Horizontal" Margin="0,0,0,10">
+											<TextBlock FontSize="16">
+										<Hyperlink Foreground="#333" Command="{Binding DataContext.OpenCourseUrlCommand,RelativeSource={RelativeSource AncestorType=UserControl,Mode=FindAncestor}}" CommandParameter="{Binding Url}">
+											<Hyperlink.Style>
+												<Style>
+													<Setter Property="TextBlock.TextDecorations" Value="{x:Null}"></Setter>
+													<Style.Triggers>
+														<Trigger Property="Hyperlink.IsMouseOver" Value="True">
+															<Setter Property="TextBlock.TextDecorations">
+																<Setter.Value>
+																	<TextDecorationCollection>
+																		<TextDecoration Location="Underline"></TextDecoration>
+																	</TextDecorationCollection>
+																</Setter.Value>
+															</Setter>
+														</Trigger>
+													</Style.Triggers>
+												</Style>
+											</Hyperlink.Style>
+											<TextBlock Text="{Binding CourseName}"></TextBlock>
+										</Hyperlink>
+									</TextBlock>
+											<ItemsControl Margin="15,0" ItemsSource="{Binding Teachers}">
+												<ItemsControl.ItemsPanel>
+													<ItemsPanelTemplate>
+														<VirtualizingStackPanel Orientation="Horizontal"></VirtualizingStackPanel>
+													</ItemsPanelTemplate>
+												</ItemsControl.ItemsPanel>
+												<ItemsControl.ItemTemplate>
+													<DataTemplate>
+														<Border Background="#EEE" Margin="5,0" CornerRadius="5">
+															<TextBlock Text="{Binding}" Margin="12,3"></TextBlock>
+														</Border>
+													</DataTemplate>
+												</ItemsControl.ItemTemplate>
+											</ItemsControl>
+										</StackPanel>
+										<TextBlock Text="{Binding Description}" TextWrapping="Wrap" LineHeight="23" Foreground="#AAA"></TextBlock>
+									</StackPanel>
+									<StackPanel Orientation="Horizontal" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center">
+										<TextBlock Margin="5,0">
+							<Hyperlink>详情</Hyperlink>
+										</TextBlock>
+										<TextBlock Margin="5,0">
+							<Hyperlink>删除</Hyperlink>
+										</TextBlock>
+									</StackPanel>
+								</Grid>
+								<csc:SkeletonScreen Name="skeleton"></csc:SkeletonScreen>
+							</Grid>
+							<DataTemplate.Triggers>
+								<DataTrigger Binding="{Binding IsShowSkeleton}" Value="True">
+									<Setter Property="Visibility" Value="Visible" TargetName="skeleton"></Setter>
+									<Setter Property="Visibility" Value="Collapsed" TargetName="courseContent"></Setter>
+								</DataTrigger>
+								<DataTrigger Binding="{Binding IsShowSkeleton}" Value="False">
+									<Setter Property="Visibility" Value="Collapsed" TargetName="skeleton"></Setter>
+									<Setter Property="Visibility" Value="Visible" TargetName="courseContent"></Setter>
+								</DataTrigger>
+							</DataTemplate.Triggers>
+						</DataTemplate>
+					</ItemsControl.ItemTemplate>-->
+					<ItemsControl.ItemTemplateSelector>
+						<comm:CourseDataTemplateSelector DefaultTemplate="{StaticResource courseTemplate}" SkeletonTemplate="{StaticResource skeletonTemplate}"></comm:CourseDataTemplateSelector>
+					</ItemsControl.ItemTemplateSelector>
+				</ItemsControl>
+			</ScrollViewer>
+		</Grid>
+	</Border>
 </UserControl>
